Fixed tabs of search on mobile. https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/409

--- a/wp-content/themes/wp-reddoor/static/styles/src/style.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/style.less
@@ -219,8 +219,9 @@
         float: none;
         width: 100%;
         &>li{
-          width: 49.7%;
+          width: 49.999%;
           text-align: center;
+          float: left !important;
         }
       }
       .sellRentBtns{
